While starting new game now backend gets 10 random questions for the game. Make proof of concept about frontend functionality

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,11 +33,12 @@
       </div>
       <div class="buttons">
         <button class="btn btn-secondary">I'm a secondary button</button>
-        <button class="btn btn-primary">I'm a primary button</button>
+        <button class="btn btn-primary" onClick='createNewGame("64490691a4962904fd5876fc","easy")'>Start game</button>
       </div>
     </main>
     <footer>
       <p>Footer</p>
     </footer>
+    <script src="api/gameApi.js"></script>
   </body>
 </html>
