Adding comments to code, fixed updateGame functionality

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -31,7 +31,7 @@
           </button>
         </div>
 
-        <!-- todo: get these values from database -->
+        <!-- todo: get these values from database and CSS -->
         <div class="options">
           <fieldset>
             <legend>Choose Category</legend>
