--- a/frontend/src/admin.html
+++ b/frontend/src/admin.html
@@ -9,47 +9,23 @@
     <link rel="stylesheet" href="./styles/style.css" />
 
     <style>
-      :root {
-        accent-color: var(--primary-pink-light);
+      .categories {
+        display: grid;
+        gap: 0.5rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding-block: 1rem;
       }
 
-      form {
-        width: 40rem;
-      }
-      label,
-      legend,
-      input {
-        font-family: 'Source Sans Pro';
-      }
-
-      fieldset {
-        border: none;
-        display: flex;
-        flex-direction: column;
-      }
-
-      label {
-        display: flex;
-        flex-direction: column;
-        gap: 0.25rem;
-        color: rgba(255, 255, 255, 0.75);
-      }
-
-      input:not([type='submit']) {
-        border-radius: 4px;
-        border: none;
-        height: 2rem;
-        min-width: 2rem;
-      }
-
-      input.btn {
-        color: inherit;
+      .row {
+        flex-direction: row;
+        align-items: center;
+        gap: 0.5rem;
       }
 
       .form__question {
         position: relative;
         padding-bottom: 1rem;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid var(--primary-pink-light);
         margin-bottom: 1rem;
       }
 
@@ -63,29 +39,6 @@
         position: absolute;
         top: -16px;
         right: 0;
-        font-size: 1.2rem;
-        padding: 0;
-        color: var(--primary-pink);
-        outline: 1px solid var(--primary-pink);
-        background-color: white;
-        border-radius: 50%;
-        border: none;
-      }
-
-      .btn-icon:hover {
-        color: var(--primary-pink-light);
-        outline: 1px solid white;
-        border-radius: 50%;
-      }
-
-      .visually-hidden {
-        clip: rect(0 0 0 0);
-        clip-path: inset(50%);
-        height: 1px;
-        overflow: hidden;
-        position: absolute;
-        white-space: nowrap;
-        width: 1px;
       }
     </style>
   </head>
@@ -93,6 +46,32 @@
   <body>
     <form id="question_form" action="">
       <p class="lg">Add questions</p>
+
+      <fieldset class="categories">
+        <legend>Select category</legend>
+        <label class="row">
+          <input
+            type="radio"
+            name="category"
+            id="6446b1b0839b2adb69b0ecb0"
+          />JavaScript</label
+        >
+
+        <label class="row">
+          <input
+            type="radio"
+            name="category"
+            id="6447f81e6f1b5ca81f7a5506"
+          />Accessibility</label
+        >
+        <label class="row"
+          ><input
+            type="radio"
+            name="category"
+            id="64490691a4962904fd5876fc"
+          />C/C++</label
+        >
+      </fieldset>
 
       <div class="form__content"></div>
 
