Moved styles and added clearer int names

--- a/frontend/src/admin.html
+++ b/frontend/src/admin.html
@@ -7,64 +7,7 @@
     <title>Quiz App - Admin</title>
 
     <link rel="stylesheet" href="./styles/style.css" />
-
-    <style>
-      form {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .categories {
-        display: grid;
-        gap: 0.5rem;
-        grid-template-columns: 1fr 1fr 1fr;
-        padding-block: 0.5rem;
-      }
-
-      .row {
-        flex-direction: row;
-        align-items: center;
-        gap: 0.5rem;
-      }
-
-      .form__question {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        position: relative;
-        border-bottom: 1px solid var(--primary-pink-light);
-        margin-top: 1rem;
-        padding-bottom: 1rem;
-      }
-
-      legend {
-        font-size: 1.25rem;
-        margin-bottom: 0.5rem;
-      }
-
-      .form__options {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-      }
-
-      .form__options label {
-        margin-bottom: 0.25rem;
-      }
-
-      .form__row {
-        display: grid;
-        grid-template-columns: 1fr auto;
-        column-gap: 8px;
-      }
-
-      .btn-icon {
-        position: absolute;
-        top: -32px;
-        right: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="./styles/admin.css" />
   </head>
 
   <body>
