--- a/frontend/src/admin.html
+++ b/frontend/src/admin.html
@@ -8,46 +8,64 @@
 
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/admin.css" />
+
+    <style>
+      li li {
+        list-style: none;
+      }
+      li li svg {
+        margin-right: 0.25rem;
+      }
+    </style>
   </head>
 
   <body>
-    <form id="question_form" action="">
-      <p class="xl">Add questions</p>
+    <div id="main-nav" class="row">
+      <button id="category-btn" class="btn btn-primary">Categories</button>
+      <button id="question-btn" class="btn btn-primary">Questions</button>
+    </div>
 
-      <fieldset class="categories">
-        <legend class="lg">Select category</legend>
-        <label class="row">
-          <input
-            type="radio"
-            name="category"
-            id="6446b1b0839b2adb69b0ecb0"
-          />JavaScript</label
-        >
+    <section>
+      <h1>Admin</h1>
+      <!--       <form id="question_form" action="">
+        <p class="xl">Add questions</p>
 
-        <label class="row">
-          <input
-            type="radio"
-            name="category"
-            id="6447f81e6f1b5ca81f7a5506"
-          />Accessibility</label
-        >
-        <label class="row"
-          ><input
-            type="radio"
-            name="category"
-            id="64490691a4962904fd5876fc"
-          />C/C++</label
-        >
-      </fieldset>
+        <fieldset class="categories">
+          <legend class="lg">Select category</legend>
+          <label class="row">
+            <input
+              type="radio"
+              name="category"
+              id="6446b1b0839b2adb69b0ecb0"
+            />JavaScript</label
+          >
 
-      <div class="form__content"></div>
+          <label class="row">
+            <input
+              type="radio"
+              name="category"
+              id="6447f81e6f1b5ca81f7a5506"
+            />Accessibility</label
+          >
+          <label class="row"
+            ><input
+              type="radio"
+              name="category"
+              id="64490691a4962904fd5876fc"
+            />C/C++</label
+          >
+        </fieldset>
 
-      <div class="form__footer">
-        <button id="add-question" class="btn btn-primary">Add Question</button>
-        <button id="submit-form" class="btn btn-primary">Save all</button>
-      </div>
-    </form>
+        <div class="form__content"></div>
 
-    <script type="module" src="js/questionForm.js"></script>
+        <div class="form__footer">
+          <button id="add-question" class="btn btn-primary">
+            Add Question
+          </button>
+          <button id="submit-form" class="btn btn-primary">Save all</button>
+        </div>
+      </form> -->
+    </section>
+    <script type="module" src="./js/admin.js"></script>
   </body>
 </html>
