Functional header navigation and header added to admin

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,17 +9,28 @@
   </head>
   <body>
     <header>
-      <p class="title">Quiz App</p>
+      <a href="index.html" class="title">Quiz App</a>
       <nav>
-        <a href="#">Game</a>
-        <a href="#">Leaderboards</a>
-        <a href="#">Admin</a>
+        <a class="nav__link" href="index.html"
+          ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path
+              d="M20 20.0001C20 20.5524 19.5523 21.0001 19 21.0001H5C4.44772 21.0001 4 20.5524 4 20.0001V11.0001L1 11.0001L11.3273 1.61162C11.7087 1.26488 12.2913 1.26488 12.6727 1.61162L23 11.0001L20 11.0001V20.0001Z"
+            ></path>
+          </svg>
+          Home</a
+        >
+        <a class="nav__link" href="admin.html">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path
+              d="M3.78307 2.82598L12 1L20.2169 2.82598C20.6745 2.92766 21 3.33347 21 3.80217V13.7889C21 15.795 19.9974 17.6684 18.3282 18.7812L12 23L5.6718 18.7812C4.00261 17.6684 3 15.795 3 13.7889V3.80217C3 3.33347 3.32553 2.92766 3.78307 2.82598ZM5 4.60434V13.7889C5 15.1263 5.6684 16.3752 6.7812 17.1171L12 20.5963L17.2188 17.1171C18.3316 16.3752 19 15.1263 19 13.7889V4.60434L12 3.04879L5 4.60434ZM12 11C10.6193 11 9.5 9.88071 9.5 8.5C9.5 7.11929 10.6193 6 12 6C13.3807 6 14.5 7.11929 14.5 8.5C14.5 9.88071 13.3807 11 12 11ZM7.52746 16C7.77619 13.75 9.68372 12 12 12C14.3163 12 16.2238 13.75 16.4725 16H7.52746Z"
+            ></path>
+          </svg>
+          Admin</a
+        >
       </nav>
     </header>
     <main>
-      <div id="screen">
-
-      </div>
+      <div id="screen"></div>
     </main>
     <footer>
       <p>Footer</p>
