Add noscript tags to index.html and admin.html and delete unwanted console.log()

--- a/frontend/src/admin.html
+++ b/frontend/src/admin.html
@@ -53,6 +53,7 @@
     <section>
       <div class="section__header">
         <h1></h1>
+        <noscript>You need to enable JavaScript to use this Admin site!</noscript>
       </div>
       <div class="section__content"></div>
     </section>
