--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
     <main>
-      <div id="screen"></div>
+      <div id="screen"><noscript>You need to enable JavaScript to play the game!</noscript></div>
     </main>
     <footer>
       <p>Footer</p>
